--- a/package.json
+++ b/package.json
@@ -106,5 +106,9 @@
   "resolutions": {
     "strip-ansi": "^6.0.1",
     "string-width": "^4.2.2"
+  },
+  "overrides": {
+    "strip-ansi": "^6.0.1",
+    "string-width": "^4.2.2"
   }
 }
